--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,19 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css}" rel="stylesheet">
 	<link th:href="@{/css/style.css}" rel="stylesheet">
-	<title>Indoor Plants</title>
+	<title>BotanicEncounters</title>
 </head>
 
 <body class="bk">
 
 	<header>
 		<div class="text-center py-3">
-			<h1>INDOOR PLANTS</h1>
+			<h1>BotanicEncounters</h1>
 		</div>
 	</header>
 
 	<div>
-		<a th:href="@{/plantsList}" class="custom-button">PlantsList</a>
+		<a th:href="@{/botanicList}" class="custom-button">BotanicEncounters</a>
 	</div>
 
 	<main class="container">
@@ -85,12 +85,12 @@
 	<section>
 		<h6>植物に出逢う</h6>
 		<p>人の心を豊かにする -GREEN and FLOWER-<br>
-			リラックス効果   脳や視神経の疲労回復  ストレス緩和
+			リラックス効果  脳や視神経の疲れを癒し  ストレスを和らげる
 		</p>
 	</section>
 
 	<footer class="text-center py-3">
-		<p>© 2025 Indoor Plants</p>
+		<p>© 2025 Botanic Encounters</p>
 	</footer>
 
 	<script>function scrollToTop() {window.scrollTo({top: 0, behavior: 'smooth'});}</script>
