--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-lg-4 offset-lg-4"th:object="${admin}">
           <form th:action="@{/}" method="post">
-            <h2 class="h3 text-center mb-3 fw-normal">IndoorPlants</h2>
+            <h2 class="h3 text-center mb-3 fw-normal">BotanicEncounters</h2>
 
             <div class="form-floating">
               <input
