--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -10,7 +10,7 @@
   <body>
   	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" th:href="@{/plants}">IndoorPlants</a>
+        <a class="navbar-brand" th:href="@{/botanicals}">BotanicEncounters</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -72,12 +72,12 @@
     <ul class="pagination">
         <!-- 前のページへ -->
         <li th:classappend="${page == 1} ? 'disabled'" class="page-plant">
-            <a class="page-link" th:href="@{${page > 1 ? ('/plants?page=' + (page - 1)) : '#'}}">&laquo;</a>
+            <a class="page-link" th:href="@{${page > 1 ? ('/botanicals?page=' + (page - 1)) : '#'}}">&laquo;</a>
         </li>
 
         <!-- 最初のページ -->
         <li th:if="${page > 3}" class="page-item">
-            <a class="page-link" th:href="@{/plants(page=1)}">1</a>
+            <a class="page-link" th:href="@{/botanicals(page=1)}">1</a>
         </li>
         <li th:if="${page > 4}" class="page-item disabled">
             <span class="page-link">…</span>
@@ -86,7 +86,7 @@
         <!-- ページ番号 (現在ページの前後のみ表示) -->
         <th:block th:each="index : ${#numbers.sequence(page - 2 > 1 ? page - 2 : 1, page + 2 < totalPages ? page + 2 : totalPages)}">
             <li th:classappend="${index == page} ? 'active'" class="page-item">
-                <a class="page-link" th:href="@{/plants(page=${index})}">[[${index}]]</a>
+                <a class="page-link" th:href="@{/botanicals(page=${index})}">[[${index}]]</a>
             </li>
         </th:block>
 
@@ -95,12 +95,12 @@
             <span class="page-link">…</span>
         </li>
         <li th:if="${page < totalPages - 2}" class="page-item">
-            <a class="page-link" th:href="@{/plants(page=${totalPages})}">[[${totalPages}]]</a>
+            <a class="page-link" th:href="@{/botanicals(page=${totalPages})}">[[${totalPages}]]</a>
         </li>
 
         <!-- 次のページへ -->
         <li th:classappend="${page == totalPages} ? 'disabled'" class="page-item">
-            <a class="page-link" th:href="@{${page < totalPages ? ('/plants?page=' + (page + 1)) : '#'}}">&raquo;</a>
+            <a class="page-link" th:href="@{${page < totalPages ? ('/botanicals?page=' + (page + 1)) : '#'}}">&raquo;</a>
         </li>
     </ul>
 </div>
