--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,9 @@
 	<div>
 		<a th:href="@{/botanicList}" class="custom-button">BotanicEncounters</a>
 	</div>
+	<div>
+	   <a th:href="@{/admin/login}" class="custom-button2">Admin Login</a>
+	</div>  
 
 	<main class="container">
 		<section>
