--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,10 +18,10 @@
 	</header>
 
 	<div>
-		<a th:href="@{/botanicList}" class="custom-button">BotanicEncounters</a>
+		<a th:href="@{/botanicalsList}" class="custom-button">BotanicList</a>
 	</div>
 	<div>
-	   <a th:href="@{/admin/login}" class="custom-button2">Admin Login</a>
+	   <a th:href="@{/login}" class="custom-button2">Admin Login</a>
 	</div>  
 
 	<main class="container">
