--- a/src/main/resources/templates/botanicalsDetail.html
+++ b/src/main/resources/templates/botanicalsDetail.html
@@ -48,7 +48,7 @@
 										style="max-width: 500px; height: auto;">
 								</div>
 
-								<a th:href="@{/botanicList}" class="custom-button">botanicalsList</a>
+								<a th:href="@{/botanicalsList}" class="custom-button">botanicList</a>
 							</td>
 						</tr>
 					</tbody>
