--- a/src/main/resources/templates/botanicalsList.html
+++ b/src/main/resources/templates/botanicalsList.html
@@ -64,7 +64,7 @@
 				<option value="azumamakoto">azumamakoto</option>
 			</select>
 			<button type="submit" class="btn btn-dark">検索</button>
-			<p>選択中のカテゴリー: <span th:text="${selectedCategory ?: '未選択'}" class="selected-category"></span></p>
+			<p>選択中のカテゴリー: <span th:text="${selectedCategory}" class="selected-category"></span></p>
 		</form>
 	
 
