--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -28,7 +28,7 @@
                 <td>[[*{id}]]</td>
                 <td>[[*{location.name}]]</td>
                 <td>[[*{botanicName}]]</td>
-                <td><a class="btn btn-light" th:href="@{/botanic/detail/{id}(id=*{id})}">＞</a></td>
+                <td><a class="btn btn-light" th:href="@{/botanicals/detail/{id}(id=*{id})}">＞</a></td>
               </tr>
             </tbody>
           </table>
