--- a/src/main/resources/templates/botanicalsDetail.html
+++ b/src/main/resources/templates/botanicalsDetail.html
@@ -3,7 +3,7 @@
 
 <head th:replace="~{common :: head}"></head>
 
-<body style="background-color:  rgb(238, 240, 240);">
+<body style="background-color:  rgb(208, 210, 208);">
 
 	<nav th:replace="~{commonP :: navbar}"></nav>
 
@@ -60,7 +60,7 @@
 	<!-- /.container -->
 
 	<footer class="text-center py-3">
-		<p>&copy; 2025 Indoor Plants</p>
+		<p>&copy; 2025 BotanicEncounters</p>
 	</footer>
 	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 
