--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -8,7 +8,7 @@
     <title>BotanicEncounters</title>
   </head>
   <body>
-  	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+  	<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" th:href="@{/botanicals}">BotanicEncounters</a>
         <button
