--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -50,7 +50,7 @@
                 [[${session.authAdmin?.name}]]さん
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-plant" th:href="@{/home}">homeへ</a></li>
+                <li><a class="dropdown-plant" th:href="@{/home}">home</a></li>
               </ul>
             </li>
           </ul>
