--- a/src/main/resources/templates/commonP.html
+++ b/src/main/resources/templates/commonP.html
@@ -35,7 +35,8 @@
                 aria-expanded="false"
               >home</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-botanic" th:href="@{/home}" >homeへ</a></li>
+                <li><a class="dropdown-botanic" th:href="@{/home}" >home</a></li>
+                 <li><a class="dropdown-botanic" th:href="@{/botanicalsList}" >List</a></li>
               </ul>
             </li>
             <!-- ログアウトボタン 
