--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 		<a th:href="@{/botanicalsList}" class="custom-button">BotanicList</a>
 	</div>
 	<div>
-	   <a th:href="@{/login}" class="custom-button2">Admin Login</a>
+	   <a th:href="@{/}" class="custom-button2">Admin Login</a>
 	</div>  
 
 	<main class="container">
