--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,7 +7,7 @@
       <div th:if="${status != null}" class="alert alert-success">
         [[${status}]]
       </div>    
-      <h2>Botanicリスト</h2>
+      <h2>植物リスト</h2>
       <a class="btn btn-dark my-4" th:href="@{/botanicals/add}">植物の追加</a>
       <div class="center-container">
       <div class="row">
