--- a/src/main/resources/templates/botanicalsDetail.html
+++ b/src/main/resources/templates/botanicalsDetail.html
@@ -54,7 +54,7 @@
 									<div class="modal-dialog modal-fullscreen">
 										<div class="modal-content">
 											<div class="modal-header">
-												<h5 class="modal-title" id="imageModalLabel">拡大画像</h5>
+												<h5 class="modal-title" id="imageModalLabel"></h5>
 												<button type="button" class="btn-close" data-bs-dismiss="modal"
 													aria-label="Close"></button>
 											</div>
