--- a/src/main/resources/templates/botanicalsDetail.html
+++ b/src/main/resources/templates/botanicalsDetail.html
@@ -3,7 +3,7 @@
 
 <head th:replace="~{common :: head}"></head>
 
-<body style="background-color:  rgb(208, 210, 208);">
+<body style="background-color:  rgb(208, 210, 208); font-family: 'Cormorant Garamond', serif;">
 
 	<nav th:replace="~{commonP :: navbar}"></nav>
 
