--- a/src/main/resources/templates/botanicalsDetail.html
+++ b/src/main/resources/templates/botanicalsDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{common :: head}"></head>
+<head th:replace="~{common :: head}"></head>	
 
 <body style="background-color:  rgb(208, 210, 208); font-family: 'Cormorant Garamond', serif;">
 
@@ -12,7 +12,7 @@
 			[[${status}]]
 		</div>
 
-		<h2>[[*{botanicName}]]</h2>
+		<h2 style="text-align: center;">[[*{botanicName}]]</h2>
 		<div class="row">
 			<div class="col-md-12">
 				<table class="table table-bordered table-hover detail-table">
